--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -13,7 +13,7 @@
           <%= "商品名" %>
         </h2>
         <div class='buy-item-price'>
-          <p class='item-price-text'>¥<%= '999,999,999' %></p>
+          <p class='item-price-text'>¥<%= @item.price %></p>
           <p class='item-price-sub-text'><%= '配送料負担' %></p>
         </div>
       </div>
@@ -32,7 +32,7 @@
     <%# /支払額の表示 %>
 
     <%= form_with id: 'charge-form', class: 'transaction-form-wrap',local: true do |f| %>
-      <%= render 'shared/error_messages', model: f.object %>
+      <%#= render 'shared/error_messages', model: f.object %>
     <%# カード情報の入力 %>
     <div class='credit-card-form'>
       <h1 class='info-input-haedline'>
@@ -87,7 +87,7 @@
           <label class="form-text">都道府県</label>
           <span class="indispensable">必須</span>
         </div>
-        <%= f.collection_select(:sender_id, Sender.all, :id, :name, {}, {class:"select-box", id:"prefecture"}) %>
+        <%= f.collection_select(:sender_id, Sender.all, :id, :name, {}, {class:"select-box", id:"sender"}) %>
       </div>
       <div class="form-group">
         <div class='form-text-wrap'>
